almost done with rerent page!

--- a/index.html
+++ b/index.html
@@ -222,11 +222,13 @@ title: Home
                     Published work:
                 </p>
                 <ul>
-                    <li style="margin-left: 3em; line-height: 1.7; font-family: 'Open Sans', sans-serif; font-size: 90%">
-                        Mutations in the gene coding for the U2AF1 protein are known to be responsible for many cases of
-                        acute myeloid leukemia (AML). However, very little is known about how these mutations lead to disease.
-                        Our analysis found that these mutated proteins may cause AML by abnormally modifying other genes
-                        involved in the essential processes of the cell cycle and DNA repair.
+                    <li>
+                        <span style="margin-left: 3em; line-height: 1.7; font-family: 'Open Sans', sans-serif; font-size: 90%">
+                            Mutations in the gene coding for the U2AF1 protein are known to be responsible for many cases of
+                            acute myeloid leukemia (AML). However, very little is known about how these mutations lead to disease.
+                            Our analysis found that these mutated proteins may cause AML by abnormally modifying other genes
+                            involved in the essential processes of the cell cycle and DNA repair.
+                        </span>
                         <br>
                         <br>
                         <a href="https://ashpublications.org/blood/article/134/Supplement_1/1230/426742/U2AF1-Driver-Mutations-in-Hematopoietic-Disorders?searchresult=1"
