--- a/pages/rerent.html
+++ b/pages/rerent.html
@@ -4,11 +4,8 @@ layout: default
 <div class="card container mx-auto px-2 mb-4 clearfix header-text">
     <div class="subheader mt-1 py-2"
          style="display: flex;align-items: center; flex-flow: wrap; justify-content:center;">
+        <img style="max-width: 25%;" src="/media/rerent_logo.png" alt="">
         <div style="max-width: 70%">
-            <div>
-                <img style="max-width: 30%; justify-content:center;" src="/media/rerent_logo.png" alt="">
-            </div>
-
             <article class="container mx-auto px-2 mt2 mb4">
                 <div class="prose mb-2 py-4">
                     <p style="font-size: 200%" id="intro">ReRent — Software Development and Product Management</p>
@@ -32,21 +29,19 @@ layout: default
                         these
                         operational hassles and help students save money on housing.
                         <br><br><br>
-                        ReRent has successfully booked out <span class="blue">1000+</span> total nights and has served
+                        ReRent has successfully helped students book out <span class="blue">1000+</span> total nights
+                        and accommodate
                         <span class="blue">400+</span> guests since 2018. However, all prior services were handled
                         manually —
                         from helping students list their places on Airbnb to scheduling cleaners. This created a problem
                         where ReRent had the user demand to expand to other colleges, but lacked the infrastructure
                         to meet this demand.
-                        <span class="blue">Thus, my role</span> at ReRent focused on these <span
-                                class="blue">key questions</span>:
+                        Thus, <span class="blue">my role</span> at ReRent focused on this <span
+                                class="blue">key question</span>:
                     </p>
                     <br><br>
-                    <h2 style="text-align: center; margin-top: -1.5em;">[ How can I make ReRent scalable so we can help
-                        more
-                        students across more colleges save money? What infrastructure needs to be built to make
-                        home-sharing entirely
-                        painless for students? ]
+                    <h2 style="text-align: center; margin-top: -1.5em;">[ What infrastructure is needed to make
+                        ReRent scalable so we can help students across more colleges save money? ]
                     </h2>
                 </div>
             </article>
@@ -55,9 +50,8 @@ layout: default
                 <article class="container mx-auto px-2 mt2 mb4">
                     <div class="prose mb-4 py-4">
                         <p class="project-descriptions underline">Solution</p>
-                        <p style="font-family: 'Open Sans', sans-serif;">At the start of my internship, I was tasked
-                            with helping
-                            develop a web application that gets data from the ReRenter — a.k.a. the student looking to
+                        <p style="font-family: 'Open Sans', sans-serif;">My team and I built a <span class="blue">web
+                            application</span> that receives data from the ReRenter — a.k.a. the student looking to
                             rent out
                             their home — and distributes it to appropriate ReRent staff for them to handle. Automating
                             this information
@@ -67,77 +61,104 @@ layout: default
                             listings on
                             Airbnb.
                             <br><br>
-                            To this end, I worked with my team to develop a
-                            <!--At a startup, people are known to wear many hats, but I was formally transitioned into a
-                            product manage role in the middle fo the summer.
-                            Make interactions seamless and familiar to help students help themselves.-->
+                            Specifically, I <span class="blue">implemented</span> an email manager script that parses,
+                            stores, and
+                            distributes information that comes to ReRent's email from Airbnb. Examples
+                            of important emails that are handled by the script include bookings, cancellations, and
+                            reservation modifications. The script not only allows for information coming in from a
+                            single email inbox to be distributed automatically
+                            and securely to relevant staff, but also provides staff with a direct Airbnb link to the to
+                            the issue or request. <br>
+                            In essence, the script automated what used to be a group of small, tedious tasks
+                            (cumulatively
+                            10 hr/month of work) in a <span class="blue">single click</span>.
                         </p>
                     </div>
                 </article>
             </div>
 
-            <div id="process">
-                <p class="project-descriptions underline">Process</p>
-                <article class="container mx-auto px-2 mt2 mb4">
-                    <div class="prose mb-4 pb-4">
-                        <ul>
-                            <li style="font-size: 110%">
-                                Designing for unfamiliar users
-                            </li>
-                        </ul>
-<!--                        <h2 style="margin-top: -1.3em;">Designing for unfamiliar users</h2>-->
-                    </div>
-                </article>
+            <!--            <div id="process">
+                            <p class="project-descriptions underline">Process</p>
+                            <article class="container mx-auto px-2 mt2 mb4">
+                                <div class="prose mb-4 pb-4">
+                                    <ul>
+                                        <li>
+                                            <span style="font-size: 110%">
+                                                Designing for unfamiliar users
+                                            </span>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </article>
 
-                <article class="container mx-auto px-2 mt2 mb4">
-                    <div class="prose mb-4 pb-4">
-                        <h2 style="margin-top: -1.3em;">Learning how to conduct formal user interviews</h2>
-                        <p style="max-width: 24em;margin-right: 1em;">I had never formally run user interviews or
-                            conducted
-                            usability testing before. Getting to tackle the entire process, from recruiting users, to
-                            creating
-                            the scripts, to running the sessions was a great learning experience that taught me .
-                        </p>
-                    </div>
-                </article>
+                            <article class="container mx-auto px-2 mt2 mb4">
+                                <div class="prose mb-4 pb-4">
+                                    <ul>
+                                        <li>
+                                            <span style="font-size: 110%">
+                                                Learning how to conduct formal user interviews
+                                            </span>
+                                        </li>
+                                    </ul>
+                                    <p style="max-width: 24em;margin-right: 1em;">I had never formally run user interviews or
+                                        conducted
+                                        usability testing before. Getting to tackle the entire process, from recruiting users, to
+                                        creating
+                                        the scripts, to running the sessions was a great learning experience that taught me .
+                                    </p>
+                                </div>
+                            </article>
 
-                <article class="container mx-auto px-2 mt2 mb4">
-                    <div class="prose mb-4 pb-4">
+                            <article class="container mx-auto px-2 mt2 mb4">
+                                <div class="prose mb-4 pb-4">
 
-                        <h2 style="margin-top: -1.3em;">Recognition rather than recall</h2>
+                                    <h2 style="margin-top: -1.3em;">Recognition rather than recall</h2>
 
-                    </div>
-                </article>
+                                </div>
+                            </article>
 
-                <article class="container mx-auto px-2 mt2 mb4">
-                    <div class="prose mb-4 pb-4">
-                        <h2 style="margin-top: -1.3em;">Working from home, and the transition from software engineering
-                            intern
-                            to product manager role</h2>
-                        At the time of my internship, we were a team of 8. The size of the team gave me the unique
-                        opportunity to directly see the impact of my work on the product.
-                    </div>
-                </article>
-            </div>
+                            <article class="container mx-auto px-2 mt2 mb4">
+                                <div class="prose mb-4 pb-4">
+                                    <h2 style="margin-top: -1.3em;">Working from home, and the transition from software engineering
+                                        intern
+                                        to product manager role</h2>
+                                    At the time of my internship, we were a team of 8. The size of the team gave me the unique
+                                    opportunity to directly see the impact of my work on the product.
+                                </div>
+                            </article>
+                        </div>-->
 
             <article class="container mx-auto px-2 mt2 mb4">
                 <div class="prose mb-4 pb-4">
-                    <div style="margin-left: -10em;">
-                        <h5 id="results">Impact and Results</h5>
-                    </div>
+                    <p class="project-descriptions underline">Impact and Results</p>
+                    <p style="font-family: 'Open Sans', sans-serif;">
+                        ReRent was a small but mighty team of 8 at the time of my internship. As a product
+                        management intern at such a small startup, I had the unique opportunity to not only make product
+                        decisions, but actively implement them. The size of the team allowed for frequent
+                        feedback and gave me the chance to really see the impact of my work on the product.
+                        <br>
+                        Here's a summary of the work I did:
+                        <div style="display: grid;grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));width: 100%;grid-column-gap: 2em;grid-row-gap: 2em;">
+                            <div><h5>Software Development</h5>12 weeks</div>
+                            <div><h5>Product Management</h5>P</div>
+                        </div>
+                    <!--<ul>
+                        <li>
+                        </li>
+                    </ul>-->
+                    </p>
                 </div>
             </article>
 
             <article class="container mx-auto px-2 mt2 mb4">
                 <div class="prose mb-4 pb-4">
-                    <div id="final" style="margin-left: -10em;"><h5>Final</h5><h5>Words</h5></div>
-                    <p style="margin-top: -3.8em; font-family: 'Open Sans', sans-serif;">A huge thank you to my mentor
-                        Fazail and the founder and CEO of
-                        ReRent
-                        Alikiah for supporting me throughout this internship and challenging me with such a large-scope
-                        project.
-                        I also want to thank my development team for their feedback and insight which has helped me grow
-                        immensely as developer.
+                    <p class="project-descriptions underline">Reflections</p>
+                    <p style="font-family: 'Open Sans', sans-serif;">
+                        A huge thank you to my mentors Fazail (PM) and Alikiah (CEO) for giving me this amazing
+                        opportunity
+                        and challenging me with such a large-scope project.
+                        I also want to thank my development team for creating such a great work environment and
+                        for constantly giving me helpful feedback that has allowed me to grow immensely as developer.
                     </p>
                 </div>
             </article>
