finish rerent page

--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@ title: Home
                     Published work:
                 </p>
                 <ul>
-                    <li>
-                        <span style="margin-left: 3em; line-height: 1.7; font-family: 'Open Sans', sans-serif; font-size: 90%">
+                    <li style="margin-left: 3em;">
+                        <span style="line-height: 1.7; font-family: 'Open Sans', sans-serif; font-size: 90%">
                             Mutations in the gene coding for the U2AF1 protein are known to be responsible for many cases of
                             acute myeloid leukemia (AML). However, very little is known about how these mutations lead to disease.
                             Our analysis found that these mutated proteins may cause AML by abnormally modifying other genes
