--- a/pages/rerent.html
+++ b/pages/rerent.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 <div class="card container mx-auto px-2 mb-4 clearfix header-text">
-    <img style="max-width: 25%; justify-content: center" src="/media/rerent_logo.png" alt="">
+    <img style="max-width: 20%; display: flex; justify-content: center" src="/media/rerent_logo.png" alt="">
     <div class="subheader mt-1 py-2"
-         style="display: flex;align-items: center; flex-flow: wrap; justify-content:center;">
+         style="display: flex; align-items: center; flex-flow: wrap; justify-content:center;">
         <div style="max-width: 70%">
             <article class="container mx-auto px-2 mt2 mb4">
                 <div class="prose mb-2 py-4">
