--- a/index.html
+++ b/index.html
@@ -241,11 +241,13 @@ title: Home
                      style="width: 60%">
                 <br>
                 <ul style="margin-left: 3em">
-                    <li style="line-height: 1.7; font-family: 'Open Sans', sans-serif; font-size: 90%">
-                        In the past, mice have been "humanized" with human stem cell grafts in order to act as
+                    <li>
+                        <p style="line-height: 1.7; font-family: 'Open Sans', sans-serif; font-size: 90%">
+                            In the past, mice have been "humanized" with human stem cell grafts in order to act as
                         more accurate models for experimentation. However, all of these previous mouse models lack
                         mature human blood cells, which are essential for studies of blood-related diseases, such as
                         leukemia. Our team generated the first humanized mice with fully matured blood cells.
+                        </p>
                         <br>
                         <br>
                         <a href="https://ashpublications.org/blood/article/134/Supplement_1/338/426253/In-Vivo-reconstruction-of-Human-Erythropoiesis?searchresult=1"
@@ -257,11 +259,13 @@ title: Home
                 <img src="/media/abstract2.png" class="img_abstracts" alt="ASH-ley's abstracts 2"
                      style="width: 60%">
                 <ul style="margin-left: 3em">
-                    <li style="line-height: 1.7; font-family: 'Open Sans', sans-serif; font-size: 90%">
+                    <li>
+                        <p style="line-height: 1.7; font-family: 'Open Sans', sans-serif; font-size: 90%">
                         DNA repair is known to be abnormal in individuals with acute myeloid leukemia (AML). When a protein
                         essential for DNA repair called PARP was inhibited, we found that leukemia-initiating cells were
                         reduced in mice engrafted with AML. This suggests that PARP inhibitors could be a potential
                         treatment option for AML.
+                        </p>
                         <br>
                         <br>
                         <a href="https://ashpublications.org/blood/article/134/Supplement_1/4222/425718/PARP-Inhibitors-Are-Effective-in-IDH1-2-Mutant-MDS?searchresult=1"
