--- a/pages/rerent.html
+++ b/pages/rerent.html
@@ -5,14 +5,13 @@ layout: default
     <div class="subheader mt-1 py-2"
          style="display: flex; align-items: center; flex-flow: wrap; justify-content:center; margin-top: -2em">
         <img style="max-width: 20%;" src="/media/rerent_logo.png" alt="">
-        <p style="font-size: 200%" id="intro">ReRent — Software Development and Product Management</p>
     </div>
     <div class="subheader mt-1 py-2"
          style="display: flex; align-items: center; flex-flow: wrap; justify-content:center;">
         <div style="max-width: 70%">
             <article class="container mx-auto px-2 mt2 mb4">
                 <div class="prose mb-2 py-4">
-<!--                    <p style="font-size: 200%" id="intro">ReRent — Software Development and Product Management</p>-->
+                    <p style="font-size: 200%; text-align: center" id="intro">ReRent — Software Development and Product Management</p>
                     <div style="display: grid;grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));width: 100%;grid-column-gap: 2em;grid-row-gap: 2em;">
                         <div><h6>Timeline</h6>12 weeks<br>June 2020 - Sept. 2020</div>
                         <div><h6>Tools</h6>Python, Django, PostgreSQL, Heroku, Figma, FlowMapp</div>
