--- a/pages/rerent.html
+++ b/pages/rerent.html
@@ -74,7 +74,7 @@ layout: default
                             the issue or request.
                             <br>
                             <br>
-                            <span style="font-weight: bold">In essence, the script automated what used to be a group of small, tedious tasks
+                            <span style="font-weight: 600">In essence, the script automated what used to be a group of small, tedious tasks
                             (cumulatively
                                 10 hr/month of work) in a <span class="blue">single click</span>.</span>
                         </p>
