--- a/pages/rerent.html
+++ b/pages/rerent.html
@@ -169,7 +169,7 @@ layout: default
                         </div>
                         <div>
                             <p style="font-size: 110%">Product Management</p>
-                            <ul>
+                            <ul style="margin-left: 3em;">
                                 <li>
                                     <p style="font-family: 'Open Sans', sans-serif; font-size: 90%; margin-left: 3em; line-height: 1.7">
                                     Led weekly agile development sprints
