final touches for real

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Home
             <span class="home-title1">hello!</span>
             <span class="home-title2">I'm Ashley</span>
             <span class="home-subtitle"><span class="blue">developer</span>, <span
-                    class="blue">researcher</span>, and <span class="blue">bioengineering</span> student at Yale. Passionate about merging <span
+                    class="blue">researcher</span>, and <span class="blue">student</span> at Yale. Passionate about merging <span
                     class="blue">software</span> and <span class="blue">science</span>.</span>
             <a href="mailto:ashleyelaineqin@gmail.com" style="margin-left: auto">Let's get in touch </a><span
                 class="blue">&rarr;</span>
