--- a/pages/rerent.html
+++ b/pages/rerent.html
@@ -68,9 +68,9 @@ layout: default
                             stores, and
                             distributes information that comes to ReRent's email from Airbnb. Examples
                             of important emails that are handled by the script include bookings, cancellations, and
-                            reservation modifications. The script not only allows for information coming in from a
-                            single email inbox to be distributed automatically
-                            and securely to relevant staff, but also provides staff with a direct Airbnb link to the to
+                            reservation modifications. The script not only allows for information coming into a
+                            single inbox to be distributed automatically
+                            and securely to relevant staff, but also provides staff with a direct Airbnb link to
                             the issue or request.
                             <br>
                             <br>
