--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Home
                 class="blue">&rarr;</span>
             <span class="home-bottom"></span>
         </div>
-        <img id="bio-prof-pic" src="/media/profile.jpg">
+        <img id="bio-prof-pic" src="/media/IMG_2107.JPG">
     </div>
 </div>
 
